Fix navigation bar showing behind tab pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import './constants/colors.css';
+
 * {
     box-sizing: border-box;
 }
@@ -10,6 +12,9 @@ body {
 
 .navigation-bar {
     position: absolute;
+    z-index: 1000;
+
+    background-color: var(--lighter-brown);
 }
 
 .tab-page {
